src/test/deca/context/valid/inheritance/override_same_signature_ok.deca
// Description :
//    Redéfinition de méthode avec signature identique.
//
// Resultats :
//    OK

class A {
    int f() {
        return 1;
    }
}

class B extends A {
    int f() {
        return 2;
    }
}

{
}

