src/test/deca/context/invalid/inheritance/override_wrong_signature_1.deca
// Description :
//    Redéfinition d'une méthode avec une signature différente (nombre de paramètres).
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int f(int x) {
        return x;
    }
}

class B extends A {
    int f() {
        return 0;
    }
}

{
}

